--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="src/style.css" />
   <script src="https://kit.fontawesome.com/5c3c5c30d2.js" crossorigin="anonymous"></script> 
   <link rel="icon" href="src/bin/images/logo5.ico" type="image/x-icon"/>
   <title>Mahak Portfolio</title>
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
